Fixed padding issue on insights page on tablet screens

--- a/src/css/__components/_insights-description.scss
+++ b/src/css/__components/_insights-description.scss
@@ -25,7 +25,7 @@
         justify-content: center;
         align-items: center;
         text-align: left;
-        padding: 80px;
+        padding: 80px 30px;
 
         .insight__image-holder {
             display: flex;
